RESOLVED FIXED222807
Fix potential thread-safety issue in WebsiteDataStore::fetchDataAndApply()
https://bugs.webkit.org/show_bug.cgi?id=222807
Summary Fix potential thread-safety issue in WebsiteDataStore::fetchDataAndApply()
Chris Dumez
Reported 2021-03-05 10:08:41 PST
Fix potential thread-safety issue in WebsiteDataStore::fetchDataAndApply().
Attachments
Patch (6.03 KB, patch)
2021-03-05 10:16 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-03-05 10:16:49 PST
Geoffrey Garen
Comment 2 2021-03-05 12:45:26 PST
Comment on attachment 422379 [details] Patch r=me
EWS
Comment 3 2021-03-05 12:49:32 PST
Committed r273996: <https://commits.webkit.org/r273996> All reviewed patches have been landed. Closing bug and clearing flags on attachment 422379 [details].
Radar WebKit Bug Importer
Comment 4 2021-03-05 12:50:16 PST
Note You need to log in before you can comment on or make changes to this bug.