Fix potential thread-safety issue in WebsiteDataStore::fetchDataAndApply() https://bugs.webkit.org/show_bug.cgi?id=222807

Reviewed by Geoffrey Garen.

Fix an issue when WebsiteDataStore::fetchDataAndApply() failed to create an isolated
copy of the WebsiteDataRecords before passing them to its internal dispatch queue.
Also add more threading assertions to help catch issues since we have crashes in this
area of the code.

* UIProcess/WebsiteData/WebsiteDataRecord.cpp:
(WebKit::WebsiteDataRecord::isolatedCopy const):
* UIProcess/WebsiteData/WebsiteDataRecord.h:
* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::fetchDataAndApply):


Canonical link: https://commits.webkit.org/234940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273996 268f45cc-cd09-0410-ab3c-d52691b4dbfc