Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp
@@ -310,7 +310,7 @@ void WebsiteDataStore::fetchData(OptionSet<WebsiteDataType> dataTypes, OptionSet
 
 void WebsiteDataStore::fetchDataAndApply(OptionSet<WebsiteDataType> dataTypes, OptionSet<WebsiteDataFetchOption> fetchOptions, RefPtr<WorkQueue>&& queue, Function<void(Vector<WebsiteDataRecord>)>&& apply)
 {
-    struct CallbackAggregator final : ThreadSafeRefCounted<CallbackAggregator> {
+    struct CallbackAggregator final : ThreadSafeRefCounted<CallbackAggregator, WTF::DestructionThread::MainRunLoop> {
         CallbackAggregator(OptionSet<WebsiteDataFetchOption> fetchOptions, RefPtr<WorkQueue>&& queue, Function<void(Vector<WebsiteDataRecord>)>&& apply, WebsiteDataStore& dataStore)
             : fetchOptions(fetchOptions)
             , queue(WTFMove(queue))
@@ -322,19 +322,19 @@ void WebsiteDataStore::fetchDataAndApply(OptionSet<WebsiteDataType> dataTypes, O
 
         ~CallbackAggregator()
         {
+            ASSERT(RunLoop::isMain());
             ASSERT(!pendingCallbacks);
-
-            // Make sure the data store gets destroyed on the main thread even though the CallbackAggregator can get destroyed on a background queue.
-            RunLoop::main().dispatch([protectedDataStore = WTFMove(protectedDataStore)] { });
         }
 
         void addPendingCallback()
         {
-            pendingCallbacks++;
+            ASSERT(RunLoop::isMain());
+            ++pendingCallbacks;
         }
 
         void removePendingCallback(WebsiteData websiteData)
         {
+            ASSERT(RunLoop::isMain());
             ASSERT(pendingCallbacks);
             --pendingCallbacks;
 
@@ -420,13 +420,14 @@ void WebsiteDataStore::fetchDataAndApply(OptionSet<WebsiteDataType> dataTypes, O
 
         void callIfNeeded()
         {
+            ASSERT(RunLoop::isMain());
             if (pendingCallbacks)
                 return;
 
             Vector<WebsiteDataRecord> records;
             records.reserveInitialCapacity(m_websiteDataRecords.size());
             for (auto& record : m_websiteDataRecords.values())
-                records.uncheckedAppend(WTFMove(record));
+                records.uncheckedAppend(queue ? crossThreadCopy(record) : WTFMove(record));
 
             auto processRecords = [apply = WTFMove(apply), records = WTFMove(records)] () mutable {
                 apply(WTFMove(records));
